# inf1-fp-competition

./: .gitignore  Mandelbrot.cabal  Mandelbrot.hs  Mandelbrot.lhs  Plotting.hs  README.md  Vec2.hs  cabal.sandbox.config  inf1-fp-competition.cabal  main.hs
src/: Fractals.hs  Magnifying.hs  Rendering.hs  Vec2.hs  main.hs
