name: mandelbrot
version: 0.0.1
cabal-version: >= 1.2
build-type: Simple

executable mandelbrot
    main-is: Mandelbrot.lhs
    ghc-options: -O2 -threaded -rtsopts -eventlog
    -- Ensure these versions appear on DICE machines
    build-depends: base         >= 4 && < 5,
                   time,
                   old-locale,
                   filepath,
                   deepseq     >= 1.3 && < 1.4,
                   directory   >= 1.2.0.1,
                   parallel    >= 3.2.0.3,
                   vector      >= 0.10.0.1,
                   JuicyPixels >= 3.1.1.1
