name: mandelbrot
version: 0.0.1
cabal-version: >= 1.2
build-type: Simple

executable mandelbrot
    main-is: main.hs
    hs-source-dirs: src
    -- Specify versions exactly (except for base) in order to match DICE
    build-depends: base,
                   directory   == 1.2.0.1,
                   parallel    == 3.2.0.3,
                   vector      == 0.10.0.1,
                   JuicyPixels == 3.1.1.1
